--- a/docs/styles/index.scss
+++ b/docs/styles/index.scss
@@ -77,6 +77,23 @@ li{
 }
 //////////////////////////////////////////////////////
 
+
+@media screen and (max-width: 1024px){
+    ///////////////////////////Top bar
+.top-bar{   
+    .bar-info{
+        p:nth-child(1){
+            padding-left: 24px;
+        }
+    }
+    .bar-login{     
+        p:nth-child(3){
+            margin-right: 24px;
+        }
+    }
+}
+/////////////////////////////
+
 ////////////////////////////Burger button
 .burger{
     width: 25px;
@@ -91,17 +108,16 @@ li{
     }
 }
 /////////////////////////////////////////
-@media screen and (max-width: 1024px){
     /////////////////////////////Navigation
     nav{
-
-
+        margin: 0 !important;
+        overflow: hidden;
         .nav-wrapper{
-        @include maxWidth;
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
+            transition: all 0.4s ease-in-out;
+            align-items: flex-start;
+            
         .logo-burger{
+            display: block;
             display: flex;
             align-items: center;
             svg{
@@ -110,168 +126,26 @@ li{
         }
         }
         .menu{
+            display: none;
             border-top: 1px solid $hoverColor;
             position: absolute;
             left: 140px;
-            top: 50px;
-            display: block;
-            align-items: center;
+            top: 65px;
             padding-top: 15px;
             li{
                 margin: 15px 0;
-                font-weight: bold;
-                a{
-                    @include Transition;
-                }
-                a:hover{
-                    color: $hoverColor; 
-                }
     /////////Pop-up ul
     .pop-up-ul{
-        position: absolute;
-        left: 0;
-        right: 0;
-        z-index: 3;
-        font-size: 14px;
-        background-color: transparent;
-        display: none;
-        padding-top: 15px;
-            
-            .col-wrapper{
-                @include maxWidth;
-                display: flex;
-                
-                .pop-up-col{
-                    flex: 0,1,20%;
-                    ul li{
-                        padding-right: 25px;
-                    }
-                }
-            }
-        .pop-up-wrapper{
-        border-top: 1px solid $hoverColor;
-        border-bottom: 1px solid $hoverColor;
-        background-color: #fff;
-        ul{
-            @include maxWidth; 
-            margin-top: 30px !important;
-            margin-bottom: 30px !important;
-            li{
-                margin: 25px 0;
-                font-weight: normal;
-                a{
-                    @include Transition;
-                }
-                a:hover{
-                    color: $hoverColor; 
-                }
-            }
-            li:first-of-type{
-                margin: 0 0 15px 0;
-            }
-        }
-        }
-        
+       display: none !important;
     }
     //////////////////             
             }      
-            li .sales-btn{
-                color: red;
-            }
-            li .sales-btn:hover{
-                color: rgb(250, 115, 115);
-            }
-            li:hover .pop-up-ul{
-                display: block;
-            }
         }
-        .busket{
-            display: flex;
+        .busket{         
             align-items: center;
             margin-right: 20px;
             height: 76px;
-            li{
-                margin: 0 15px;
-                font-weight: bold;
-                a{
-                    @include Transition;
-                    span{
-                        background-color: orange;
-                        padding: 3px 10px;
-                        border-radius: 50px;
-                        color: #fff !important;
-                    }
-                }
-                a:hover{
-                    color: rgb(160, 160, 160); 
-                }
-            }
-            li:last-of-type{
-                margin: 0 0 0 15px;
-            }
         }
     }
-    /////////////////////////////
-    
-    
-    /////////////////////////////Landing Carousel
-    .carousel{
-        height: 400px;
-        width: 100%;
-        position: relative;
-    }
-    .landing-slide{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        opacity: 0;
-        .landing-title{
-            display: flex;
-            justify-content: center;
-            width: 100%;
-            height: 100%;
-            background-color: #0009;
-            color: #fff;
-            h1{
-                margin-top: 230px;
-                font-size: calc(18px + 3vmin);
-            }
-        }
-    }
-    .landing-buttons{
-        position: absolute;
-        display: flex;
-        top: 90%;
-        left: 50%;
-        transform: translate(-50%, -80%);
-        z-index: 1;
-        .landing-btn{
-            width: 15px;
-            height: 15px;
-            background-color: #fff;
-            border-radius: 25px;
-            margin: 15px;
-            cursor: pointer;
-        }
-    }
-    .landing-slide1{
-        background-image: url(../images/cloth1.jpg);
-    }
-    .landing-slide2{
-        background-image: url(../images/cloth2.jpg);
-    }
-    .landing-slide3{
-        background-image: url(../images/cloth3.jpg);
-    }
-    .landing-slide4{
-        background-image: url(../images/cloth4.jpg);
-    }
-    .active{
-        opacity: 1;
-    }
-    .active-btn{
-        background-color: $hoverColor !important;
-    }
-    /////////////////////////////////////////////
+    ///////////////////////////// 
 }
