--- a/docs/index.scss
+++ b/docs/index.scss
@@ -8,15 +8,15 @@ $hoverColor: rgb(160, 160, 160);
 }
 @font-face{
     font-family: PopLight;
-    src: url('../fonts/Poppins-Light.ttf')
+    src: url('fonts/Poppins-Light.ttf')
 }
 @font-face{
     font-family: PopRegular;
-    src: url('../fonts/Poppins-Regular.ttf')
+    src: url('fonts/Poppins-Regular.ttf')
 }
 @font-face{
     font-family: PopMedium;
-    src: url('../fonts/Poppins-Medium.ttf')
+    src: url('fonts/Poppins-Medium.ttf')
 }
 @import "./docs/styles/landing";
 *,*::before,*::after{
