--- a/docs/styles/_landing.scss
+++ b/docs/styles/_landing.scss
@@ -218,16 +218,16 @@ nav{
     }
 }
 .landing-slide1{
-    background-image: url(../images/cloth1.jpg);
+    background-image: url(images/cloth1.jpg);
 }
 .landing-slide2{
-    background-image: url(../images/cloth2.jpg);
+    background-image: url(images/cloth2.jpg);
 }
 .landing-slide3{
-    background-image: url(../images/cloth3.jpg);
+    background-image: url(images/cloth3.jpg);
 }
 .landing-slide4{
-    background-image: url(../images/cloth4.jpg);
+    background-image: url(images/cloth4.jpg);
 }
 .active{
     opacity: 1;
