--- a/docs/index.scss
+++ b/docs/index.scss
@@ -18,7 +18,7 @@ $hoverColor: rgb(160, 160, 160);
     font-family: PopMedium;
     src: url('fonts/Poppins-Medium.ttf')
 }
-@import "./docs/styles/landing";
+@import "styles/landing";
 *,*::before,*::after{
     font-family: PopLight !important;
     margin: 0;
@@ -98,13 +98,22 @@ li{
 .burger{
     width: 25px;
     height: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    position: relative;
     .subline{
+        position: absolute;
         width: 100%;
         height: 3px;
         background-color: #000;
+    }
+    .subline:nth-of-type(1){
+        top: 0;
+    }
+    .subline:nth-of-type(2){
+        top: 50%;
+        transform: translate(0, -50%);
+    }
+    .subline:nth-of-type(3){
+        bottom: 0;
     }
 }
 /////////////////////////////////////////
@@ -130,7 +139,7 @@ li{
             border-top: 1px solid $hoverColor;
             position: absolute;
             left: 140px;
-            top: 65px;
+            top: 50px;
             padding-top: 15px;
             li{
                 margin: 15px 0;
@@ -148,4 +157,45 @@ li{
         }
     }
     ///////////////////////////// 
+}
+
+@media screen and (max-width: 768px){
+    ///////////////////////////Top bar
+    .top-bar{   
+        .wrapper{
+            justify-content: flex-end;
+            
+        }
+        .bar-info{
+            display: none;
+        }
+    }
+    /////////////////////////////
+    
+    /////////////////////////////Navigation
+    nav{
+        .menu{
+            display: none;
+        }           
+    }
+    /////////////////////////////
+}
+
+@media screen and (max-width: 425px){
+      /////////////////////////////Navigation
+      nav{     
+        .nav-wrapper{
+            .logo-burger{
+                width: 130px;
+            }
+        } 
+        .menu{
+            display: none;
+            border-top: 1px solid $hoverColor;
+            position: absolute;
+            left: 55px;
+            top: 80px;
+            padding-top: 15px;
+        }
+    }          
 }
