--- a/docs/styles/_landing.scss
+++ b/docs/styles/_landing.scss
@@ -63,6 +63,7 @@
 /////////////////////////////
 
 /////////////////////////////Navigation
+
 nav{
     font-size: 14px;
     position: relative;
@@ -196,8 +197,9 @@ nav{
         background-color: #0009;
         color: #fff;
         h1{
+            text-align: center;
             margin-top: 230px;
-            font-size: calc(18px + 3vmin);
+            font-size: calc(9px + 3vmin);
         }
     }
 }
