--- a/docs/index.css
+++ b/docs/index.css
@@ -431,22 +431,48 @@ li {
     height: 20px;
     position: relative;
   }
-  .burger .subline {
+  .subline {
     position: absolute;
     width: 100%;
     height: 3px;
     background-color: #000;
-  }
-  .burger .subline:nth-of-type(1) {
-    top: 0;
-  }
-  .burger .subline:nth-of-type(2) {
     top: 50%;
     -webkit-transform: translate(0, -50%);
             transform: translate(0, -50%);
   }
-  .burger .subline:nth-of-type(3) {
-    bottom: 0;
+  .subline::before, .subline::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #000;
+    opacity: 1 !important;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  .subline:before {
+    top: -8px;
+  }
+  .subline:after {
+    top: 8px;
+  }
+  .burger.active .subline {
+    background: #fff;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  .burger.active .subline:before, .burger.active .subline:after {
+    top: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  .burger.rotate .subline:before {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  .burger.rotate .subline:after {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
   }
   nav {
     margin: 0 !important;
