--- a/docs/index.scss
+++ b/docs/index.scss
@@ -98,23 +98,44 @@ li{
 .burger{
     width: 25px;
     height: 20px;
-    position: relative;
-    .subline{
-        position: absolute;
-        width: 100%;
-        height: 3px;
-        background-color: #000;
-    }
-    .subline:nth-of-type(1){
-        top: 0;
-    }
-    .subline:nth-of-type(2){
-        top: 50%;
-        transform: translate(0, -50%);
-    }
-    .subline:nth-of-type(3){
-        bottom: 0;
-    }
+    position: relative;    
+}
+.subline{
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #000;
+    top: 50%;
+    transform: translate(0, -50%);
+}
+.subline::before , .subline::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #000;
+    opacity: 1 !important;
+    @include Transition();
+}
+.subline:before{
+    top: -8px;
+}
+.subline:after{
+    top: 8px;
+}
+.burger.active .subline{
+    background: #fff;
+    @include Transition();
+}
+.burger.active .subline:before , .burger.active .subline:after{
+    top: 0;
+    @include Transition();
+}
+.burger.rotate .subline:before{
+    transform: rotate(45deg);
+}
+.burger.rotate .subline:after{
+    transform: rotate(-45deg);
 }
 /////////////////////////////////////////
     /////////////////////////////Navigation
