--- a/docs/styles/_landing.scss
+++ b/docs/styles/_landing.scss
@@ -68,6 +68,7 @@ nav{
     font-size: 14px;
     position: relative;
     z-index: 2;
+    background-color: #fff;
     .nav-wrapper{
         .logo-burger{
             display: flex;
