--- a/docs/index.css
+++ b/docs/index.css
@@ -108,6 +108,7 @@ nav {
   font-size: 14px;
   position: relative;
   z-index: 2;
+  background-color: #fff;
 }
 
 nav .nav-wrapper {
@@ -413,6 +414,61 @@ nav .busket li:last-of-type {
   text-align: center;
 }
 
+.categories {
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
+.categories h2 {
+  margin: 20px 0;
+}
+
+.categories-carousel {
+  overflow-x: scroll;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.categories-carousel::-webkit-scrollbar {
+  display: none;
+}
+
+.categories-carousel-elem {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  text-align: center;
+  width: 300px;
+}
+
+.categories-carousel-elem a {
+  display: block;
+  margin: 0 12px;
+  font-size: 0;
+  background-color: #fff;
+}
+
+.categories-carousel-elem a img {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  width: 100%;
+  height: 276px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.categories-carousel-elem a h1 {
+  font-size: 20px;
+  padding: 7px 0;
+}
+
+.categories-carousel-elem:hover a img {
+  opacity: 0.7;
+}
+
 *, *::before, *::after {
   font-family: PopLight !important;
   margin: 0;
@@ -440,7 +496,7 @@ li {
 }
 
 .main-wrapper {
-  background-color: #fff;
+  background-color: #ececec;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
@@ -587,6 +643,24 @@ li {
   }
   .banner {
     margin: 70px 20px;
+  }
+  .categories {
+    max-width: 1170px;
+    margin: 0 auto;
+  }
+  .categories h2 {
+    margin-left: 20px;
+  }
+  .categories-carousel {
+    overflow-x: scroll;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+  .categories-carousel-elem a {
+    margin: 0 20px;
   }
 }
 
