--- a/docs/index.scss
+++ b/docs/index.scss
@@ -22,6 +22,7 @@ $hoverColor: rgb(160, 160, 160);
 //////////////////////////////// Import
 @import "styles/landing";
 @import "styles/underlanding";
+@import "styles/categories";
 ////////////////////////////////
 
 
@@ -45,7 +46,7 @@ li{
     list-style: none;
 }
 .main-wrapper{
-    background-color: #fff;
+    background-color: rgb(236, 236, 236);
     @include Transition();
 }
 
@@ -190,6 +191,24 @@ li{
         margin: 70px 20px;
     }
     ///////////////////////////////////////////////////////////////
+
+    //////////////////////////////////////////////////////////Categories Carousel
+    .categories{
+        @include maxWidth;
+        h2{
+            margin-left: 20px;
+        }
+    }
+    .categories-carousel{
+        overflow-x: scroll;
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .categories-carousel-elem{
+        a{
+        margin: 0 20px;
+        }
+    }
 }
 
 @media screen and (max-width: 768px){
