--- a/docs/styles/_footer.scss
+++ b/docs/styles/_footer.scss
@@ -32,6 +32,7 @@ footer{
             outline: none;
         }
         button{
+            cursor: pointer;
             background-color: #04B46A;
             height: 100%;
             width: 30%;
