--- a/docs/styles/_onGoing.scss
+++ b/docs/styles/_onGoing.scss
@@ -1,5 +1,6 @@
 .categories{
     @include maxWidth;
+    margin-top: 100px;
     h2{
         margin: 20px 0;
     }
@@ -76,7 +77,8 @@
             @include Transition;
             background-color: #fff;
             position: absolute;
-            height: 90px;
+            left: 0;
+            right: 0;
             bottom: 0;
             opacity: 0;
             display: flex;
